# smoke-bomb

./: README.md
cache-test/lkm/: Makefile  armv7.h  build.sh  cache_test.c  icache_test.c  line_fill_test.c  lru_test.c
cache-test/packaging/: cache_test.spec
llvm-based/: build_all.sh  build_all_arm64.sh  build_llvm.py  clean_all.sh
llvm-based/script/: clean.sh  mem_finder.py  rewriter.py
llvm-based/smokebomb-pass/: CMakeLists.txt  Makefile  README.md  build.sh  clean.sh
llvm-based/smokebomb-pass/smokeBomb/: CMakeLists.txt  Makefile
llvm-based/smokebomb-pass/smokeBomb/include/: smokeBomb.h
llvm-based/smokebomb-pass/smokeBomb/src/: smokeBomb.cpp  test.cpp
llvm-based/src/: build.sh  build_arm64.sh  clean.sh  header.h  hello.c  sb_api.c  sb_api.h
smoke-bomb/: CMakeLists.txt  build_arm.sh  build_arm64.sh  build_arm_local.sh  clean.sh
smoke-bomb/arm/: cache.h  insn.c  patch.c
smoke-bomb/arm64/: cache.h  insn.c  insn.h  patch.c  patch.h
smoke-bomb/lib/: build_armv7.sh  build_armv8.sh  sb_api.c  sb_api.h
smoke-bomb/lkm/: Makefile  Makefile.def  Makefile.local  addr.c  build.sh  sb_lkm.c
smoke-bomb/packaging/: smoke_bomb.spec
smoke-bomb/test/: sb_test.c
