CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(smoke_bomb)

SET(VERSION 1.0)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

FILE(GLOB SB_API_SRCS lib/*.c)
FILE(GLOB SB_TEST_SRCS test/*.c)

INCLUDE(FindPkgConfig)

FOREACH(flag ${pkgs_CFLAGS}) 
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}") 
ENDFOREACH(flag)

FOREACH(flag ${pkgs_LDFLAGS}) 
	SET(EXTRA_LDFLAGS "${EXTRA_LDFLAGS} ${flag}") 
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS_DEBUG "-g -O0 -marm -D_SMOKE_BOMB_ARMV7")
SET(CMAKE_C_FLAGS_RELEASE "-O2")

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} ${EXTRA_LDFLAGS} ${CMAKE_C_FLAGS_DEBUG}") 
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${EXTRA_CFLAGS} ${EXTRA_LDFLAGS} ${CMAKE_C_FLAGS_DEBUG}")

#ADD_LIBRARY(sb_api STATIC ${SB_API_SRCS})
#SET_TARGET_PROPERTIES(sb_api PROPERTIES LINKER_LANGUAGE C)

#ADD_EXECUTABLE(sb_test ${SB_TEST_SRCS})
#TARGET_LINK_LIBRARIES(sb_test sb_api)
#SET_TARGET_PROPERTIES(sb_test PROPERTIES LINKER_LANGUAGE C)

